dates on mobile fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
-    width: 100%;
+    
 }
 
 @theme {
@@ -15,8 +15,12 @@ html {
   --color-primaryDark: #4A3A16;
 }
 
+body {
+    font-family: 'Rubik', sans-serif;
+}
+
 :root {
-  font-family: 'Rubik', sans-serif;
+
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
